--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-elements": "^2.2.0",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-paper": "^4.0.1",
     "react-native-reanimated": "~1.9.0",
     "react-native-screens": "~2.9.0",
+    "react-native-search-bar": "^3.5.1",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.4.0",
     "react-navigation-tabs": "^2.9.0"
